--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-html {
+html,body {
     font-size: 62.5%;
     overflow-x: hidden;
 }
